--- a/requirements.txt
+++ b/requirements.txt
@@ -56,3 +56,11 @@ requests>=2.31.0
 # Documentation
 sphinx>=7.0.0
 sphinx-rtd-theme>=1.3.0
+
+# Optional: PyTorch Geometric dependencies
+# Install PyTorch first, then:
+# pip install torch-scatter torch-sparse torch-cluster torch-spline-conv -f https://data.pyg.org/whl/torch-{TORCH_VERSION}+{CUDA_VERSION}.html
+
+# Molecular docking (install externally)
+# AutoDock Vina: https://vina.scripps.edu/downloads/
+# Open Babel: https://openbabel.org/docs/Installation/install.html
